# volatility-forecasting

./: README.md  pyproject.toml  volatility_basics.ipynb  xgboost_example.ipynb
modules/: asset.py  neural_nets.py  plotting.py
