[project]
name = "volatility-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "xgboost>=3.0.5",
    "yahoo-finance>=1.4.0",
    "yfinance>=0.2.66",
]

[tool.ruff]
include = ["pyproject.toml", "modules/**/*.py", "/**/*.ipynb"]
line-length = 100

[tool.ruff.lint]
select = ["D", "N", "I", "E501", "E", "F"]
ignore = ["ANN", "D410", "D413", "D100", "D211", "D213", "D203"]
exclude = [
    "**/__init__.py",
    "docs/",
]
